<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.GeneralSettingsFragment"
        android:icon="@drawable/ic_settings_nav_general"
        android:title="@string/settings_general"
        android:summary="Buscador, página de inicio, descargas y user agent" />

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.DisplaySettingsFragment"
        android:icon="@drawable/ic_settings_nav_display"
        android:title="@string/customize"
        android:summary="Temas, modo oscuro web, colores, barras y pantalla" />

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.TabsSettingsFragment"
        android:icon="@drawable/ic_settings_nav_tabs"
        android:title="@string/action_tabs"
        android:summary="Comportamiento de pestañas, restauración y primer plano" />

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.PrivacySettingsFragment"
        android:icon="@drawable/ic_settings_nav_privacy"
        android:title="@string/settings_privacy"
        android:summary="Bloqueador de anuncios, malware, cookies, HTTPS y limpieza" />

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.AdvancedSettingsFragment"
        android:icon="@drawable/ic_settings_nav_advanced"
        android:title="@string/settings_advanced"
        android:summary="JavaScript, reglas por sitio, ventanas emergentes y proxy" />

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.ExportSettingsFragment"
        android:icon="@drawable/ic_settings_nav_backup"
        android:title="@string/import_export"
        android:summary="Exportar e importar marcadores, pestañas y ajustes" />

    <androidx.preference.Preference
        android:fragment="com.cookiegames.smartcookie.settings.fragment.AboutSettingsFragment"
        android:icon="@drawable/ic_settings_nav_about"
        android:title="@string/settings_about"
        android:summary="Versión de lw Browser, WebView y repositorio" />

</androidx.preference.PreferenceScreen>
